@@ -1,0 +1,19 @@
+mysql help_relation 5 127.0.0.1
+mysql help_relation 6 127.0.0.1
+mysql help_relation 7 127.0.0.1
+mysql help_relation 8 127.0.0.1
+mysql help_topic 0 127.0.0.1
+mysql help_topic 1 127.0.0.1
+mysql help_topic 2 127.0.0.1
+mysql help_topic 3 127.0.0.1
+mysql help_topic 4 127.0.0.1
+mysql host 0 127.0.0.1
+mysql proc 0 127.0.0.1
+mysql procs_priv 0 127.0.0.1
+mysql tables_priv 0 127.0.0.1
+mysql time_zone 0 127.0.0.1
+mysql time_zone_leap_second 0 127.0.0.1
+mysql time_zone_name 0 127.0.0.1
+mysql time_zone_transition 0 127.0.0.1
+mysql time_zone_transition_type 0 127.0.0.1
+mysql user 0 127.0.0.1
